cabal-version:      2.0
name:               SamplingPerf
version:            0.1.1.3
license:            MIT
license-file:       LICENSE.md
build-type:         Simple
extra-source-files: CHANGELOG.md

executable replicate-random
  main-is:          replicateRandom.hs
  hs-source-dirs:   .
  other-modules:
  default-language: Haskell2010
  build-depends:
      base
    , mtl
    , mwc-random
    , primitive
    , random
    , transformers

executable replicate-random-new
  main-is:          replicateRandomNew.hs
  hs-source-dirs:   .
  other-modules:
  default-language: Haskell2010
  build-depends:
      base
    , mtl
    , mwc-random
    , primitive
    , random
    , transformers
